# TDT4102

Project/: main.cpp
Project tdt4102/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  README.md  Settings.h  main.cpp  meson.build
Project tdt4102/modules/: GameObject.h  Ghost.cpp  Ghost.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h
Teori/: README.md
Teori/Chapter 4/: exercises.cpp  exercises.h  main.cpp  meson.build
Teori/chapter 3/: exercises.cpp  exercises.h  main.cpp
